# single-table-rs

./: Cargo.toml  README.md
scripts/: start-ddb.sh
src/: args.rs  ddb.rs  env.rs  lib.rs  main.rs  mem.rs  sts.rs  traits.rs  types.rs
tests/: lib.rs
tests/cases/: database.rs  ddb.rs  memory.rs  mod.rs
